Issue 6107: Scrolled-down editor for long value opens at wrong position
http://code.google.com/p/fbug/issues/detail?id=6107

--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -194,10 +194,6 @@
     display: none;
 }
 
-.cssPropValue.editing {
-    white-space: nowrap;
-}
-
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 .useA11y .a11yCSSView .focusRow:focus {
